cmake_minimum_required (VERSION 3.10...3.22)

project(my_benchmark VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(BUILD_SHARED_LIBS OFF)

set(BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}")

# Build google benchmark
set(GOOGLE_BENCHMARK_DIR "${PROJECT_SOURCE_DIR}/third_party/benchmark")
set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "" FORCE)
set(BENCHMARK_ENABLE_EXCEPTIONS OFF CACHE BOOL "" FORCE)
set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
add_subdirectory(${GOOGLE_BENCHMARK_DIR})

# Build custom benchmark
set(BENCHMARK_DIR "${PROJECT_SOURCE_DIR}/benchmark")
add_subdirectory(${BENCHMARK_DIR})
